Renamed Files , Removed Add Admin API , now using "Register" API
