# backend/src/controllers/adminController.js
@@ -1,23 +1,9 @@
 const AdminService = require("../services/adminService");
-const IAdminRepository = require("../infrastructure/interfaces/IAdminRepository");
+const AdminRepository = require("../domain/repositories/AdminRepository");
 
-const adminRepository = new IAdminRepository();
+const adminRepository = new AdminRepository();
 const adminService = new AdminService(adminRepository);
-
-exports.createAdmin = async (req, res) => {
-  try {
-    const body = {
-      username: req.body.name,
-      password: req.body.password,
-      isDeleted: req.body.isDeleted,
-    };
-    const admin = await adminService.createAdmin(body);
-
-    res.status(201).json(admin);
-  } catch (error) {
-    res.status(500).json({ error: error.message });
-  }
-};
+//delete
 
 exports.getAllAdmins = async (req, res) => {
   try {
