# backend/src/routes/adminRoutes.js
@@ -6,25 +6,6 @@ const authMiddleware = require("../middleware/authMiddleware");
 /**
  * @swagger
  * /:
- *   post:
- *     tags:
- *       - Admin
- *     description: Add new admin user
- *     parameters:
- *       - name: body
- *         in: body
- *         required: true
- *         schema:
- *           $ref: '#/definitions/Admin'
- *     responses:
- *       201:
- *         description: Admin successfully added
- */
-router.post("/add", authMiddleware.protected, adminController.createAdmin);
-
-/**
- * @swagger
- * /:
  *   get:
  *     tags:
  *       - Admin
